--- a/pkg/finetune/config.yaml
+++ b/pkg/finetune/config.yaml
@@ -1,7 +1,6 @@
 #syntax=aikit:test
 apiVersion: v1alpha1
 debug: true
-runtime: cuda # remove
 provider: unsloth
 baseModel: unsloth/llama-2-7b-bnb-4bit
 datasets:
@@ -10,15 +9,11 @@ datasets:
 config:
   unsloth:
     maxSeqLength: 2048
-    loadIn4bit: true # maybe?
+    loadIn4bit: true
     batchSize: 2
     gradientAccumulationSteps: 4
-    warmupSteps: 5
+    warmupSteps: 10
     maxSteps: 60
-    learningRate: 1e-4
-    fp16: true
-    bf16: false
-    tf32: false
     loggingSteps: 1
     optimizer: adamw_8bit
     weightDecay: 0.01
@@ -28,4 +23,4 @@ output:
   path: path/to/model
   format: f16
   quantize: q4_0
-  uploadToHF: true
+  token: 123
