--- a/test/aikitfile-unsloth.yaml
+++ b/test/aikitfile-unsloth.yaml
@@ -7,16 +7,18 @@ datasets:
 config:
   unsloth:
     # TODO: add validations
+    packing: False
     maxSeqLength: 2048
     loadIn4bit: true
     batchSize: 2
     gradientAccumulationSteps: 4
     warmupSteps: 10
     maxSteps: 60
+    learningRate: 0.0002
     loggingSteps: 1
     optimizer: adamw_8bit
     weightDecay: 0.01
-    lrSchedular: linear
+    lrSchedulerType: linear
     seed: 42
 output:
   quantize: q8_0
