--- a/test/aikitfile-unsloth.yaml
+++ b/test/aikitfile-unsloth.yaml
@@ -1,8 +1,8 @@
 #syntax=sozercan/aikit:test
 apiVersion: v1alpha1
-baseModel: unsloth/llama-2-7b-bnb-4bit
+baseModel: unsloth/gemma-2b-it-bnb-4bit
 datasets:
-  - source: "https://huggingface.co/datasets/laion/OIG/resolve/main/unified_chip2.jsonl"
+  - source: "yahma/alpaca-cleaned"
     type: alpaca
     # TODO: figure out type
 config:
