--- a/.github/workflows/test-finetune.yaml
+++ b/.github/workflows/test-finetune.yaml
@@ -61,7 +61,7 @@ jobs:
         run: |
           result=$(curl --fail --retry 10 --retry-all-errors http://127.0.0.1:8080/v1/chat/completions -H "Content-Type: application/json" -d '{
             "model": "custom",
-            "messages": [{"role": "user", "content": "explain kubernetes in a sentence"}]
+            "messages": [{"role": "user", "content": "Compose a haiku about cats"}]
           }')
           echo $result
 
