--- a/test/aikitfile-unsloth.yaml
+++ b/test/aikitfile-unsloth.yaml
@@ -1,6 +1,6 @@
 #syntax=aikit:test
 apiVersion: v1alpha1
-baseModel: unsloth/llama-2-7b-bnb-4bit
+baseModel: unsloth/mistral-7b-instruct-v0.2-bnb-4bit
 datasets:
   - source: "yahma/alpaca-cleaned"
     type: alpaca
